1.全部新增網頁頁籤icon 2.首頁修改scroll 3.文章首頁新增換頁頁籤 4.header樣式修改

--- a/html/layout/headerNormal.html
+++ b/html/layout/headerNormal.html
@@ -16,11 +16,12 @@
                     <li style="--animation-order: 1;">
                         <input id="navMenu" type="checkbox">
                         <label for="navMenu" class="deepColor">
-                            <a href="galleryDoor.html">
+                            <a href="galleryDoor.html" class="deepColor">
                                 藝廊
                             </a>
-                                <i class="fa-solid fa-angle-down"></i>
-                            
+                            <b>
+                                ▼
+                            </b>   
                         </label>
                         <ul>
                             <li><a href="" class="lightColor">展示區</a></li>
@@ -42,7 +43,7 @@
                     <li style="--animation-order: 5;">
                         <a href="3dSurroundView.html" class="deepColor">會員中心</a>
                     </li>
-                    <li style="--animation-order: 6;">
+                    <!-- <li style="--animation-order: 6;">
                         <section class="memberList">
                             <div class="icon">
                                     <a href="">
@@ -50,16 +51,23 @@
                                     </a>
                             </div>
                             <div class="icon">
-                                    <a href="">
+                                    <a href="3dSurroundView.html">
                                         <img src="assets/image/home_header_iconMember.png">
                                     </a>
                             </div>
                         </section>
-                    </li>
-                    <li style="--animation-order: 7;">
+                    </li> -->
+                    <li style="--animation-order: 6;">
                         <div class="login">
                             <a href="login.html" class="whiteRound">登入</a>
                             <a href="listing.html" class="round">上架</a>
+                            <div class="notice header">
+                                <i class="fas fa-bell"></i>
+                                <!-- 通知紅點 -->
+                                <span class="notice_dot">
+                                    <span class="notice_dotNumber"></span>
+                                </span>
+                            </div>
                         </div>
                     </li>
                 </ul>
