--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -32,19 +32,19 @@
             <nav>
                     <ul>
                         <li>
-                            <a href="">藝廊</a>
+                            <a href="galleryDoor.html">藝廊</a>
                         </li>
                         <li>
-                            <a href="">拍賣廳</a>
+                            <a href="prouductAll.html">拍賣廳</a>
                         </li>
                         <li>
-                            <a href="">藝論</a>
+                            <a href="articleAll.html">藝論</a>
                         </li>
                         <li>
-                            <a href="">關於我們</a>
+                            <a href="about.html">關於我們</a>
                         </li>
                         <li>
-                            <a href="">會員中心</a>
+                            <a href="3dSurroundView.html">會員中心</a>
                         </li>
                     </ul>
             </nav>
