--- a/sass/page/_homePage.scss
+++ b/sass/page/_homePage.scss
@@ -148,9 +148,6 @@
 .homeCatalog .catalog .card .pic img{
     width: 100%;
 }
-.homeCatalog .catalog .brame .pic img{
-    z-index: 9999;
-}
 .homeCatalog .catalog .card .txt{
     display: block;
     width: 200px;
@@ -219,49 +216,73 @@
         font-size: 4.375em;
     }
 }
+// 滑動區
+.scrollDown{
+    overflow: hidden;
+    position: relative;
+    // border: 10px solid red;
+}
+.scrollDown .scrollPic{
+    width: 200px;
+    position: absolute;
+    bottom: 100%;
+    // border: 3px solid red;
+    z-index: 1;
+}
+// 手機250px
+@media screen and (min-width:768px){
+    .scrollDown .scrollPic{
+        width: 400px;
+        left: 24%;
+    }
+}
 /* 藝廊區 */
 .homeGallery{
-    /* width: 90%;
-    max-width: 1200px; */
-    /* height: 100vh; */
-    margin: auto;
     position: relative;
     overflow: hidden;
-    z-index: 901;
 }
-// 滑動假圖
-.homeGallery .scrollPic{
-    width: 50%;
-    /* 定位在.homeGallery */
-    position: absolute;
-    top: -30%;
-    left: 50%;
-    z-index: 999;
-}
-.homeGallery .scrollPic img{
-    width: 100%;
-}
-// 背景圖
+// 藝廊背景圖
 .homeGallery .pic{
-    height: 100vh;
+    height: 100%;
     width: auto;
-    display: flex;
-    justify-content: center;
 }
 .homeGallery .pic img{
     height: 100%;
+    width: auto;
 }
-// 展間內容
+// // 藝廊滑動假圖
+// .homeGallery .scrollPic{
+//     width: 400px;
+//     // 手機250px
+//     padding: 0px 10px;
+//     box-sizing: border-box;
+//     // 定位homeGallery
+//     position: absolute;
+//     top: -80px;
+//     left: 29.5%;
+// }
+// .homeGallery .scrollPic img{
+//     width: 100%;
+// }
+@media screen and (min-width:768px){
+    .homeGallery .pic{
+        height: 100vh;
+        width: 100%;
+    }
+    .homeGallery .pic img{
+        height: 100%;
+        width: 100%;
+    }
+}
+// 藝廊區展間內容
 .homeGallery .txt{
     /* 定位在.homeGallery */
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     left: 50%;
-    transform: translateX(-50%);
-    width: 90%;
     border-radius: 1em;
-    padding: 10px 10px 10px 20px;
+    padding: 10px;
     box-sizing: border-box;
     // 透明卡片
     background-color: #3e444a05;
@@ -272,63 +293,57 @@
     border-left: 1px solid #ffffff30;
     backdrop-filter: blur(0.5em);
 }
-.homeGallery .txt h2,.homeGallery .txt p{
-    width: 50%;
-}
 .homeGallery .txt button{
-    margin: 30px 0 0px;
+    margin: 30px 0 10px;
 }
-@media screen and (min-width:768px){
-    .homeGallery .scrollPic{
-        width: 300px;
-        top: -30%;
-        left:50%;
-    }
-    .homeGallery .txt{
-        width: 30%;
-    }
-}
+
+
 /* 會員中心 */
 .homeMember{
-    /* width: 90%;
-    max-width: 1200px; */
-    /* height: 100; */
-    margin: auto;
-    /* border: 1px solid red; */
-    overflow: hidden;
     position: relative;
+    overflow: hidden;
 }
-.homeMember .scrollPic{
-    width: 50%;
-    /* 定位在.homeMember */
-    position: absolute;
-    top: -30%;
-    left: 50%;
-    z-index: 900;
-}
-// 展間內容
-.homeMember .scrollPic img{
-    width: 100%;
-}
+// 會員中心背景圖
 .homeMember .pic{
     height: 100vh;
     width: auto;
-    display: flex;
-    justify-content: center;
 }
 .homeMember .pic img{
     height: 100%;
+    width: auto;
 }
+// 會員滑動假圖
+// .homeMember .scrollPic{
+//     width: 400px;
+//     padding: 0px 10px;
+//     box-sizing: border-box;
+//     // 定位homeGallery
+//     position: absolute;
+//     bottom: 100%;
+//     left: 29.5%;
+// }
+// .homeMember .scrollPic img{
+//     width: 100%;
+// }
+@media screen and (min-width:768px){
+    .homeMember .pic{
+        height: 100vh;
+        width: 100%;
+    }
+    .homeMember .pic img{
+        height: auto;
+        width: 100%;
+    }
+}
+// 會員中心展間內容
 .homeMember .txt{
     /* 定位在.homeMember */
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     left: 50%;
-    transform: translateX(-50%);
-    width: 90%;
     border-radius: 1em;
-    padding: 10px 10px 10px 20px;
+    padding: 10px;
     box-sizing: border-box;
     // 透明卡片
     background-color: #3e444a05;
@@ -339,22 +354,8 @@
     border-left: 1px solid #ffffff30;
     backdrop-filter: blur(0.5em);
 }
-.homeMember .txt h2,.homeMember .txt p{
-    width: 50%;
-}
 .homeMember .txt button{
-    margin: 30px 0 0px;
-}
-@media screen and (min-width:768px){
-    .homeMember .scrollPic{
-        width: 300px;
-        top: -30%;
-        left:50%;
-        z-index: 999;
-    }
-    .homeMember .txt{
-        width: 30%;
-    }
+    margin: 30px 0 10px;
 }
 /* 藝論 */
 .homeNews{
@@ -364,7 +365,7 @@
     /* background-color: rgb(241, 154, 154); */
     justify-content: center;
     align-items: center;
-    padding: 40% 0;
+    padding: 15% 0 20%;
     position: relative;
     overflow: hidden;
 }
