--- a/sass/page/_about.scss
+++ b/sass/page/_about.scss
@@ -1,4 +1,7 @@
 .aboutMain{
+    .a,.b,.c,.d{
+        display: none;
+    }
     .introduceCardWrap{
         margin: auto;
         // 書櫃
@@ -6,7 +9,7 @@
             width: 100%;
             height: 2.5em;
             display: inline-block;
-            background: #ddb892;
+            background: url(../../assets/image/texture.jpeg);
             position: relative;
             top: 0em;
             left: 0;
@@ -16,7 +19,8 @@
             width: 100%;
             height: 4em;
             display: inline-block;
-            background: #e6ccb2;
+            background: url(../../assets/image/texture.jpeg);
+            opacity: 0.5;
             -webkit-transform: scaleY(1.3) perspective(1em) rotateX(1deg);
             transform: scaleY(1.3) perspective(1em) rotateX(1deg);
             -webkit-transform-origin: bottom;
@@ -51,6 +55,19 @@
                 a{
                     text-decoration: none;
                     color: #141414;
+
+                    h2{
+                        position: absolute;
+                        top: -5%;
+                        left: 55%;
+                        opacity: 0.1;
+                        font-size: 4em;
+                    }
+
+                    p{
+                        font-size: 1em;
+                        opacity: 0.5;
+                    }
                 }
             }
         }
@@ -60,10 +77,26 @@
 /*手機專用*/
 @media screen and (max-width: 767px) {
     .aboutMain{
+        .introduceCardWrapPC{
+            display: none;
+        }
+        .introduceCardWrapRWD{
+            display: block;
+        }
         .introduceCardWrap{
             .raw{
                 .introduceCard{
-                    margin: 1em 1em;
+                    margin: 1em 2.5em;
+                    padding: 3.5em 0;
+                    a{
+                        h2{
+                            font-size: 3.5em;
+                            top: -11%;
+                        }
+                        p{
+                            font-size: 0.8em;
+                        }
+                    }
                 }
             }
         }
@@ -72,5 +105,20 @@
 
 /* md平板直up */
 @media screen and (min-width: 768px) {
-
+    .aboutMain{
+        .introduceCardWrapPC{
+            display: block;
+        }
+        .introduceCardWrapRWD{
+            display: none;
+        }
+        .introduceCardWrap{
+            .raw{
+                .introduceCard{
+                    margin: 1em 3em;
+                    padding: 4.5em 2.5em;
+                }
+            }
+        }
+    }
 }
