--- a/sass/page/_listing.scss
+++ b/sass/page/_listing.scss
@@ -551,6 +551,7 @@ text-align: center;
     outline: none;
     box-shadow: inset 1px 1px 2px 1px #ccc;
     background-color: #FBF7F3;
+    resize: none;
 }
 .productIntro textarea:hover{
     box-shadow: inset 2px 3px 3px 1px #ccc;
@@ -568,6 +569,7 @@ text-align: center;
     outline: 0px;
     box-shadow: inset 1px 1px 2px 1px #ccc;
     background-color: #FBF7F3;
+    resize: none;
 }
 .sellerIntro textarea:hover{
     box-shadow: inset 2px 3px 3px 1px #ccc;
