--- a/sass/layout/_headerNormal.scss
+++ b/sass/layout/_headerNormal.scss
@@ -47,6 +47,11 @@ header{
 .headerNormalContain .mainMenu ul li ul li a{
     font-size: 0.8em;
 }
+// 箭頭大小
+.headerNormalContain .mainMenu ul li b{
+    font-size: 0.5em;
+    margin: 0 0 0 3px;
+}
 .headerNormalContain .mainMenu a:hover{
     color: #394897;
     font-weight: 500;
@@ -68,16 +73,17 @@ header{
     transform: scale(1.1);
     transition: .3s;
 }
-.headerNormalContain .mainMenu li .memberList .icon:first-child img:hover{
-    content: url(../image/home_header_iconBellHover.png);
-}
-.headerNormalContain .mainMenu li .memberList .icon:last-child img:hover{
-    content: url(../image/home_header_iconMemberHover.png);
-}
-.headerNormalContain .mainMenu li .login{
-    display: flex;
-    align-items: center; 
-}
+// 原兩顆icon
+// .headerNormalContain .mainMenu li .memberList .icon:first-child img:hover{
+//     content: url(../image/home_header_iconBellHover.png);
+// }
+// .headerNormalContain .mainMenu li .memberList .icon:last-child img:hover{
+//     content: url(../image/home_header_iconMemberHover.png);
+// }
+// .headerNormalContain .mainMenu li .login{
+//     display: flex;
+//     align-items: center; 
+// }
 .headerNormalContain .mainMenu li .login a{
     text-decoration: none;
     padding: 10px 25px;
