改連結至藝廊

--- a/html/layout/headerNormal.html
+++ b/html/layout/headerNormal.html
@@ -24,11 +24,11 @@
                             </b>   
                         </label>
                         <ul>
-                            <li><a href="" class="lightColor">展示區</a></li>
-                            <li><a href="" class="lightColor">雕塑類</a></li>
-                            <li><a href="" class="lightColor">畫作類</a></li>
-                            <li><a href="" class="lightColor">公仔類</a></li>
-                            <li><a href="" class="lightColor">品牌合作</a></li>
+                            <li><a href="galleryAll/gallery/gallery.html" class="lightColor">展示區</a></li>
+                            <li><a href="galleryAll/gallery/gallery.html" class="lightColor">雕塑類</a></li>
+                            <li><a href="galleryAll/gallery/gallery.html" class="lightColor">畫作類</a></li>
+                            <li><a href="galleryAll/gallery/gallery.html" class="lightColor">公仔類</a></li>
+                            <li><a href="galleryAll/gallery/gallery.html" class="lightColor">品牌合作</a></li>
                         </ul>
                     </li>
                     <li style="--animation-order: 2;" >
