--- a/sass/page/_notice.scss
+++ b/sass/page/_notice.scss
@@ -97,7 +97,7 @@
 /* 通知欄位 的按鈕 */
 
 .noticeContain_button {
-    background: #6c757d;
+    background: #FFD60A;
     color: #fff;
     font-size: 14px;
     border-radius: 4px;
@@ -112,7 +112,7 @@
 }
 
 .button＿all {
-    background: #0D6EFD;
+    background: #141414;
 }
 
 @media(min-width:769px) {
