--- a/sass/basic/uiSet.scss
+++ b/sass/basic/uiSet.scss
@@ -11,6 +11,7 @@ button{
 }
 input{
     font-family: 'Noto Serif TC', serif;
+    -webkit-appearance: none;
 }
 // input check添加陰影
 input:not([type*="submit"]):focus,
