--- a/sass/layout/_headerNormal.scss
+++ b/sass/layout/_headerNormal.scss
@@ -152,15 +152,27 @@ header{
     }
     /* 漢堡選單 */
     .headerNormalContain .hamburger{
-        width: 30px;
-        height: 2px;
-        margin: auto;
-        /* background-color: #000; */
-        border: 1px #394897 solid;
-        border-radius: 5px;
-        box-shadow: 0px 10px 0px #394897,
-                    0px -10px 0px #394897;
+        width: 40px;
+        height: 45px;
         cursor: pointer;
+        position: relative;
+        &::after{
+            //  偽類 定位在原生物件上(.hamburger)
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            position: absolute;
+            content: '';
+            width: 30px;
+            height: 2px;
+            margin: auto;
+            /* background-color: #000; */
+            border: 1px #394897 solid;
+            border-radius: 5px;
+            box-shadow: 0px 10px 0px #394897,
+                        0px -10px 0px #394897;
+        }
     }
     .headerNormalContain .mainMenu ul {
         display: flex;
@@ -219,9 +231,16 @@ header{
     .headerNormalContain .mainMenu .close div {
         width: 32px;
         height: 32px;
-        overflow: hidden;
+        // overflow: hidden;
+        position: relative;
     }
     .headerNormalContain .mainMenu .close div:before,.headerNormalContain .mainMenu .close div:after {
+        position: absolute;
+        top:0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        margin: auto;
         content: "";
         width: 100%;
         height: 2px;
