1.首頁底圖抽換 2.index背景圖修正

--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -47,3 +47,8 @@
         color:#394897;
     }
 }
+@media screen and (max-width:768px){
+    .indexWrap{
+        background: url(../../assets/image/index_background.jpg) no-repeat center center;
+    }
+}
