--- a/sass/page/_homePage.scss
+++ b/sass/page/_homePage.scss
@@ -1,13 +1,17 @@
-// #mouse負片效果(待寫){
-//     width: 100px;
-//     height: 100px;
-//     background-color: firebrick;
+// #mouse負片效果(待寫)
+// .cursor{
+//     width: 80px;
+//     height: 80px;
+//     background-color: #FFD60A;
 //     border-radius: 200px;
 //     // filter:invert(1);
-//     position: absolute;
-//     top: 100px;
-//     left: 0%;
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     transform:translate(-50%,-50%);
 //     z-index: 99999;
+//     mix-blend-mode: difference;
+//     pointer-events: none;
 // }
 .homeWrap{
     width: 100%;
